tests/models/enum/unit/fail/max_items.stderr
error: Only support alias term on the unit field.
 --> tests/models/enum/unit/fail/max_items.rs:5:5
  |
5 |     Value
  |     ^^^^^
